--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -301,12 +301,12 @@ jobs:
             isScheduled: ''
         include:
           # Mandatory tests
-          #   - jupyterConnection: remote //https://github.com/microsoft/vscode-jupyter/issues/16851
-          #     python: python
-          #     pythonVersion: '3.10'
-          #     tags: '^[^@]+$|@mandatory'
-          #     os: ubuntu-latest
-          #     ipywidgetsVersion: ''
+          - jupyterConnection: remote
+            python: python
+            pythonVersion: '3.10'
+            tags: '^[^@]+$|@mandatory'
+            os: ubuntu-latest
+            ipywidgetsVersion: ''
           #   - jupyterConnection: remote
           #     python: python
           #     pythonVersion: '3.10'
@@ -314,31 +314,37 @@ jobs:
           #     tags: '^[^@]+$|@mandatory'
           #     os: ubuntu-latest
           #     ipywidgetsVersion: ''
-          #   - jupyterConnection: web //https://github.com/microsoft/vscode-jupyter/issues/16851
-          #     python: python
-          #     pythonVersion: '3.10'
-          #     tags: '^[^@]+$|@mandatory'
-          #     os: ubuntu-latest
-          #     ipywidgetsVersion: ''
+          - jupyterConnection: web
+            python: python
+            pythonVersion: '3.10'
+            tags: '^[^@]+$|@mandatory'
+            os: ubuntu-latest
+            ipywidgetsVersion: ''
           - jupyterConnection: raw
             python: python
             pythonVersion: '3.10'
             tags: '^[^@]+$|@mandatory'
             os: windows-latest
             ipywidgetsVersion: ''
-          # IPyWidgets 8
+          # IPyWidgets 7 & 8
           - jupyterConnection: raw
             python: python
             pythonVersion: '3.10'
             tags: '@widgets'
             os: ubuntu-latest
-            ipywidgetsVersion: '8'
+            ipywidgetsVersion: '7'
+          - jupyterConnection: raw
+            python: python
+            pythonVersion: '3.10'
+            tags: '@widgets'
+            os: ubuntu-latest
+            ipywidgetsVersion: ''
           - jupyterConnection: remote
             python: python
             pythonVersion: '3.10'
             tags: '@widgets'
             os: ubuntu-latest
-            ipywidgetsVersion: '8'
+            ipywidgetsVersion: ''
           # Conda
           - jupyterConnection: raw
             python: conda
@@ -361,12 +367,12 @@ jobs:
             os: ubuntu-latest
             ipywidgetsVersion: ''
           # Misc
-        #   - jupyterConnection: remote //https://github.com/microsoft/vscode-jupyter/issues/16851
-        #     python: python
-        #     pythonVersion: '3.10'
-        #     tags: '@kernelCore'
-        #     os: ubuntu-latest
-        #     ipywidgetsVersion: ''
+          - jupyterConnection: remote
+            python: python
+            pythonVersion: '3.10'
+            tags: '@kernelCore'
+            os: ubuntu-latest
+            ipywidgetsVersion: ''
 
     steps:
       - name: Checkout
@@ -425,16 +431,16 @@ jobs:
       # Caching (https://github.com/actions/cache/blob/main/examples.md#python---pip
       - name: Cache pip on linux
         uses: actions/cache@v4
-        if: matrix.os == 'ubuntu-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion != '8'
+        if: matrix.os == 'ubuntu-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion == '7'
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-${{hashFiles('build/venv-test-requirements.txt')}}
+          key: ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-${{hashFiles('build/venv-test-ipywidgets7-requirements.txt')}}
           restore-keys: |
             ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-7
 
       - name: Cache pip on linux
         uses: actions/cache@v4
-        if: matrix.os == 'ubuntu-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion == '8'
+        if: matrix.os == 'ubuntu-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion != '7'
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-${{hashFiles('build/venv-test-ipywidgets8-requirements.txt')}}
@@ -443,16 +449,16 @@ jobs:
 
       - name: Cache pip on mac
         uses: actions/cache@v4
-        if: matrix.os == 'macos-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion != '8'
+        if: matrix.os == 'macos-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion == '7'
         with:
           path: ~/Library/Caches/pip
-          key: ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-${{hashFiles('build/venv-test-requirements.txt')}}
+          key: ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-${{hashFiles('build/venv-test-ipywidgets7-requirements.txt')}}
           restore-keys: |
             ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-7
 
       - name: Cache pip on mac
         uses: actions/cache@v4
-        if: matrix.os == 'macos-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion == '8'
+        if: matrix.os == 'macos-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion != '7'
         with:
           path: ~/Library/Caches/pip
           key: ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-${{hashFiles('build/venv-test-ipywidgets8-requirements.txt')}}
@@ -461,16 +467,16 @@ jobs:
 
       - name: Cache pip on windows
         uses: actions/cache@v4
-        if: matrix.os == 'windows-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion != '8'
+        if: matrix.os == 'windows-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion == '7'
         with:
           path: ~\AppData\Local\pip\Cache
-          key: ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-${{hashFiles('build/venv-test-requirements.txt')}}
+          key: ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-${{hashFiles('build/venv-test-ipywidgets7-requirements.txt')}}
           restore-keys: |
             ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-7
 
       - name: Cache pip on windows
         uses: actions/cache@v4
-        if: matrix.os == 'windows-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion == '8'
+        if: matrix.os == 'windows-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion != '7'
         with:
           path: ~\AppData\Local\pip\Cache
           key: ${{ runner.os }}-pip-${{env.PYTHON_VERSION}}-${{hashFiles('build/venv-test-ipywidgets8-requirements.txt')}}
@@ -517,30 +523,29 @@ jobs:
       # debugpy is not shipped, only installed for local tests.
       # In production, we get debugpy from python extension.
       - name: Install Python Libs
-        if: matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion != '8' && matrix.tags != '@notebookPerformance'
+        if: matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion == '7' && matrix.tags != '@notebookPerformance'
         run: |
           python --version
           python -c "import sys;print(sys.executable)"
-          python -m pip --disable-pip-version-check install -r build/venv-test-requirements.txt
+          python -m pip --disable-pip-version-check install -r build/venv-test-ipywidgets7-requirements.txt
           python -m pip install packaging # required for installing debugpy
+          python -m pip install --upgrade notebook
           python ./pythonFiles/install_debugpy.py
           python -m ipykernel install --user
 
       - name: Install Jupyter Notebook and Lab
         if: matrix.jupyterConnection == 'remote' || matrix.jupyterConnection == 'web'
         run: |
-          python -m pip install jupyterlab notebook
+          python -m pip install --upgrade jupyterlab notebook
 
       - name: Install Python Libs (IPyWidget 8)
-        if: matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion == '8' && matrix.tags != '@notebookPerformance'
+        if: matrix.python != 'conda' && matrix.python != 'noPython' && matrix.ipywidgetsVersion != '7' && matrix.tags != '@notebookPerformance'
         run: |
           python --version
           python -c "import sys;print(sys.executable)"
-          python -m pip install ipywidgets -U
           python -m pip --disable-pip-version-check install -r build/venv-test-ipywidgets8-requirements.txt
           python -m pip install packaging # required for installing debugpy
           python ./pythonFiles/install_debugpy.py
-          python -m pip install ipywidgets -U
           python -m ipykernel install --user
 
       - name: Install Python Libs for conda
@@ -551,20 +556,20 @@ jobs:
           python -m pip install packaging # required for installing debugpy
           python ./pythonFiles/install_debugpy.py
 
-      - name: Install matplotlib widgets into user and system paths
-        if:
-          matrix.os == 'ubuntu-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.packageVersion != 'prerelease' && matrix.tags != '^[^@]+$|@mandatory' && matrix.tags != '@notebookPerformance'
-          # This test will ensure widgets work when installed in 3 places
-          # 1. In python environments site-packages folder (we have other 3rd party widgets in the python env)
-          # 2. In user's home folder (ipympl will be installed in there)
-          # 3. In system folder (all users) (matplotlib will be installed in there)
-        run: |
-          # Uninstall ipympl from the sys prefix folder and ensure the widget scripts are installed
-          # into the user directory.
-          export PYTHON_EXECUTABLE=$(which python)
-          echo $PYTHON_EXECUTABLE
-          python -m jupyter nbextension uninstall --sys-prefix --py ipympl
-          sudo $PYTHON_EXECUTABLE -m jupyter nbextension install --system --py ipympl
+      #   - name: Install matplotlib widgets into user and system paths
+      #     if:
+      #       matrix.os == 'ubuntu-latest' && matrix.python != 'conda' && matrix.python != 'noPython' && matrix.packageVersion != 'prerelease' && matrix.tags != '^[^@]+$|@mandatory' && matrix.tags != '@notebookPerformance'
+      #       # This test will ensure widgets work when installed in 3 places
+      #       # 1. In python environments site-packages folder (we have other 3rd party widgets in the python env)
+      #       # 2. In user's home folder (ipympl will be installed in there)
+      #       # 3. In system folder (all users) (matplotlib will be installed in there)
+      #     run: |
+      #       # Uninstall ipympl from the sys prefix folder and ensure the widget scripts are installed
+      #       # into the user directory.
+      #       export PYTHON_EXECUTABLE=$(which python)
+      #       echo $PYTHON_EXECUTABLE
+      #       python -m jupyter nbextension uninstall --sys-prefix --py ipympl
+      #       sudo $PYTHON_EXECUTABLE -m jupyter nbextension install --system --py ipympl
 
       # Run npm install (we need chrome to get downloaded)
       - name: npm ci
@@ -615,11 +620,13 @@ jobs:
 
       - name: Create Virtual Env for Tests
         uses: ./.github/actions/create-venv-for-tests
-        if: matrix.python != 'conda' && matrix.python != 'noPython' && matrix.os != 'windows-latest' && matrix.jupyterConnection != 'remote' && matrix.tags != '^[^@]+$|@mandatory' && matrix.ipywidgetsVersion != '8' && matrix.jupyterConnection != 'web' && matrix.jupyterConnection != 'remote' && matrix.tags != '@debugger' && matrix.tags != '@webview|@export|@lsp|@variableViewer' && matrix.tags != '@notebookPerformance'
+        if: matrix.python != 'conda' && matrix.python != 'noPython' && matrix.os != 'windows-latest' && matrix.jupyterConnection != 'remote' && matrix.tags != '^[^@]+$|@mandatory' && matrix.ipywidgetsVersion == '7' && matrix.jupyterConnection != 'web' && matrix.jupyterConnection != 'remote' && matrix.tags != '@debugger' && matrix.tags != '@webview|@export|@lsp|@variableViewer' && matrix.tags != '@notebookPerformance'
+        with:
+          IPyWidgetVersion: '7'
 
       - name: Create Virtual Env for Tests (ipywidgets 8)
         uses: ./.github/actions/create-venv-for-tests
-        if: matrix.python != 'conda' && matrix.python != 'noPython' && matrix.os != 'windows-latest' && matrix.jupyterConnection != 'remote' && matrix.tags != '^[^@]+$|@mandatory' && matrix.ipywidgetsVersion == '8' && matrix.jupyterConnection != 'web' && matrix.jupyterConnection != 'remote' && matrix.tags != '@debugger' && matrix.tags != '@webview|@export|@lsp|@variableViewer' && matrix.tags != '@notebookPerformance'
+        if: matrix.python != 'conda' && matrix.python != 'noPython' && matrix.os != 'windows-latest' && matrix.jupyterConnection != 'remote' && matrix.tags != '^[^@]+$|@mandatory' && matrix.ipywidgetsVersion != '7' && matrix.jupyterConnection != 'web' && matrix.jupyterConnection != 'remote' && matrix.tags != '@debugger' && matrix.tags != '@webview|@export|@lsp|@variableViewer' && matrix.tags != '@notebookPerformance'
         with:
           IPyWidgetVersion: '8'
 
